--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -7,7 +7,10 @@ import Layout from "../layouts/Base.astro";
         <div class="text-dark max-w-300">
             <h1 class="text-3xl font-serif font-semibold mb-6">Abhi Agarwal</h1>
             <div class="text-base/6 font-serif">
-                <p>Howdy! I'm Abhi, and I build things and now try to write about them.</p>
+                <p>
+                    Howdy! I'm Abhi, and I build things and now try to write
+                    about them.
+                </p>
                 <p>Some things about me:</p>
                 <ul class="list-disc list-outside ps-6 py-3">
                     <li>
@@ -27,8 +30,8 @@ import Layout from "../layouts/Base.astro";
                     </li>
                     <li>I have two kittens that I adore.</li>
                     <li>
-                        I currently build software for America's
-                        national security ecosystem.
+                        I currently build software for America's national
+                        security ecosystem.
                     </li>
                 </ul>
                 <p>Some values that are important to me:</p>
