Spend 12 hours picking out the right color pallette
Signed-off-by: Abhi Agarwal <abhiaagarwal01@gmail.com>

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,9 +4,9 @@ import Layout from "../layouts/Base.astro";
 
 <Layout>
     <main class="m-8 flex justify-center">
-        <div class="text-dark max-w-300">
-            <h1 class="text-3xl font-serif font-semibold mb-6">Abhi Agarwal</h1>
-            <div class="text-base/6 font-serif">
+        <div class="text-dark max-w-300 font-serif">
+            <h1 class="text-3xl font-semibold mb-6">Abhi Agarwal</h1>
+            <div class="text-base/6">
                 <p>
                     Howdy! I'm Abhi, and I build things and now try to write
                     about them.
