--- a/src/layouts/Nav.astro
+++ b/src/layouts/Nav.astro
@@ -4,8 +4,8 @@ const { pathname } = Astro.url;
 
 const links: { href: string; text: string }[] = [
     { href: "/", text: "Home" },
-    { href: "/blog", text: "Blog" },
-    { href: "/notes", text: "Notes" },
+    { href: "/about", text: "About" },
+    { href: "/explore", text: "Explore" },
 ];
 ---
 
