--- a/src/layouts/Base.astro
+++ b/src/layouts/Base.astro
@@ -7,6 +7,7 @@ import Nav from "./Nav.astro";
 
 import lora from "@fontsource-variable/lora/files/lora-latin-wght-normal.woff2?url";
 import firaCode from "@fontsource-variable/fira-code/files/fira-code-latin-wght-normal.woff2?url";
+import Footer from "./Footer.astro";
 ---
 
 <!doctype html>
@@ -43,8 +44,9 @@ import firaCode from "@fontsource-variable/fira-code/files/fira-code-latin-wght-
             href={firaCode}
         />
     </head>
-    <body class="bg-light transition-colors flex flex-col min-h-screen">
+    <body class="bg-light transition-colors flex flex-col min-h-screen gap-4">
         <Nav />
-        <slot />
+        <main class="flex-grow m-8"><slot /></main>
+        <Footer />
     </body>
 </html>
