--- a/src/layouts/Footer.astro
+++ b/src/layouts/Footer.astro
@@ -4,7 +4,7 @@ import Copyright from "@lucide/astro/icons/copyright";
 ---
 
 <footer
-    class="text-sm text-dark-gray text-white my-4 mx-8 font-serif self-end-safe text-right"
+    class="text-sm text-dark-gray my-4 mx-8 font-serif self-end-safe text-right"
 >
     <p>
         <Copyright class="inline h-4 w-4 align-text-bottom" />
