Add view transitions
Signed-off-by: Abhi Agarwal <abhiaagarwal01@gmail.com>

--- a/src/components/ThemeToggle.astro
+++ b/src/components/ThemeToggle.astro
@@ -21,6 +21,7 @@ const themes = Object.keys(themeConfig);
     type="button"
     id="theme-toggle-button"
     aria-label="Toggle theme"
+    transition:persist
     class:list={[
         className,
         "flex rounded-md relative w-8 h-8 overflow-hidden cursor-pointer",
