--- a/src/layouts/Footer.astro
+++ b/src/layouts/Footer.astro
@@ -4,9 +4,7 @@ import Copyright from "@lucide/astro/icons/copyright";
 const currentYear = new Date().getFullYear();
 ---
 
-<footer
-    class="text-sm text-dark-gray my-4 mx-8 font-serif self-end-safe text-right"
->
+<footer class="self-end-safe text-right font-serif text-sm text-dark-gray">
     <p>
         <Copyright class="inline h-4 w-4 align-text-bottom" />
         {currentYear} Abhi Agarwal.
