--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -3,15 +3,15 @@ import Layout from "../layouts/Base.astro";
 ---
 
 <Layout>
-    <div class="text-dark max-w-150 m-auto font-serif">
-        <h1 class="text-3xl font-semibold mb-6">Abhi Agarwal</h1>
+    <div class="m-auto max-w-2xl font-serif text-dark">
+        <h1 class="mb-6 text-3xl font-semibold">Abhi Agarwal</h1>
         <div class="text-base/6">
             <p>
                 Howdy! I'm Abhi, and I build things and now try to write about
                 them.
             </p>
             <p>Some things about me:</p>
-            <ul class="list-disc list-outside ps-6 py-3">
+            <ul class="list-outside list-disc py-3 ps-6">
                 <li>
                     I was born in Texas, lived in Minnesota for 10 years, then
                     moved to northern mass. I now live in Cambridge, MA.
