--- a/src/layouts/Nav.astro
+++ b/src/layouts/Nav.astro
@@ -10,7 +10,7 @@ const links: { href: string; text: string }[] = [
 ];
 ---
 
-<header class="flex h-12 flex-row justify-end text-dark">
+<header class="flex flex-row justify-end text-dark">
     <nav
         class="flex items-center justify-center gap-2 font-serif text-lg font-semibold text-dark"
     >
