--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -5,9 +5,9 @@
 @theme {
     --default-transition-duration: 250ms;
 
-    --color-primary: oklch(0.58 0.16 304.16);
+    --color-primary: oklch(0.61 0.14 309.8);
     --color-secondary: oklch(0.64 0.15 350);
-    --color-light: oklch(0.98 0.0166380643126323 334.6067525190699);
+    --color-light: oklch(0.98 0.016 334.6);
     --color-light-gray: oklch(0.92 0.02 325);
     --color-gray: oklch(0.75 0.02 325);
     --color-dark-gray: oklch(0.45 0.02 325);
@@ -20,7 +20,7 @@
         --color-light-gray: oklch(0.35 0.02 325);
         --color-gray: oklch(0.55 0.02 325);
         --color-dark-gray: oklch(0.85 0.02 325);
-        --color-dark: oklch(0.98 0.0166380643126323 334.6067525190699);
+        --color-dark: oklch(0.98 0.016 334.6);
     }
 
     ::-moz-selection {
