--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,5 +1,35 @@
 ---
+import Thoughts from "@lucide/astro/icons/cloud";
+import Notebook from "@lucide/astro/icons/notebook";
+import Orbit from "@lucide/astro/icons/orbit";
+import { getCollection } from "astro:content";
 import Layout from "../layouts/Base.astro";
+
+const posts = (await getCollection("blog")).filter(
+    (post) => post.data.draft !== true && post.data.kind !== undefined,
+);
 ---
 
-<Layout>Hello world!</Layout>
+<Layout>
+    <div class="mx-auto w-2xl font-serif">
+        <h1 class="mb-6 text-3xl font-semibold">Latest Posts</h1>
+        {
+            posts.map((post) => (
+                <div class="mb-12">
+                    <h2 class="mb-2 text-2xl font-semibold text-dark">
+                        {
+                            {
+                                thoughts: <Thoughts class="inline" />,
+                                notes: <Notebook class="inline" />,
+                                observations: <Orbit class="inline" />,
+                            }[post.data.kind]
+                        }
+                        <a href={`/posts/${post.id}`}>
+                            {post.data.title ?? "Unknown"}
+                        </a>
+                    </h2>
+                </div>
+            ))
+        }
+    </div>
+</Layout>
